# tick-tock-legacy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SOFTWARE_TEST_SUMMARY_REPORT.md  build_exe.bat  editorconfig.txt  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements.txt  tick_tock_widget.spec
assets/: README.md
development/: run_development.py  run_production.py  run_prototype.py  run_test.py
docs/: FIX_BLURRY_SHORTCUT.md  ICON_IMPLEMENTATION.md  ICON_QUALITY_SOLUTION.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_SOLUTION.md  SYSTEM_TRAY_INTEGRATION.md  TEST_ENVIRONMENT.md  TEST_SUITE_UPDATE_SUMMARY.md
scripts/: build_exe.py  create_icon.py  run_tests.bat  run_tests.py
scripts/icon/: README.md  analyze_icon.py  clear_icon_cache.ps1  clear_icon_cache_admin.ps1  create_desktop_shortcut.ps1  create_icon.py  test_icon.ps1
src/: tick_tock.py
src/tick_tock_widget/: __init__.py  config.json  config.py  main.py  minimized_widget.py  monthly_report.py  project_data.py  project_management.py  secure_config.py  system_tray.py  theme_colors.py  tick_tock_widget.py
tests/: README.md  __init__.py  conftest.py  test_infrastructure.py
tests/e2e/: test_user_scenarios.py
tests/integration/: test_data_management.py  test_global_config_fix.py  test_gui_integration.py  test_secure_config_integration.py  test_timer_synchronization.py
tests/unit/: test_config.py  test_critical_paths.py  test_launcher.py  test_main.py  test_minimized_widget.py  test_monthly_report.py  test_project_data.py  test_project_management.py  test_secure_config.py  test_system_tray.py  test_theme_colors.py  test_tick_tock_widget.py
