[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tick-tock-widget"
version = "0.1.0"
description = "A comprehensive project time tracking widget with GUI interface, data management, and executable builds"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Will-cz", email = "will-cz@users.noreply.github.com"},
]
maintainers = [
    {name = "Will-cz", email = "will-cz@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Widget Sets",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
]
keywords = [
    "time tracking", 
    "productivity", 
    "project management", 
    "stopwatch", 
    "widget", 
    "tkinter", 
    "gui", 
    "desktop application",
    "time management",
    "work tracking"
]

# All dependencies are part of Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
build = [
    "pyinstaller>=6.0.0",
    "setuptools>=68.0.0",
    "wheel>=0.41.0",
    "build>=0.10.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xvfb>=3.0.0",  # For GUI testing on Linux
]

[project.urls]
Homepage = "https://github.com/Will-cz/tick-tock"
Repository = "https://github.com/Will-cz/tick-tock.git"
Issues = "https://github.com/Will-cz/tick-tock/issues"
Changelog = "https://github.com/Will-cz/tick-tock/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Will-cz/tick-tock/wiki"
Download = "https://github.com/Will-cz/tick-tock/releases"

[project.scripts]
tick-tock = "tick_tock_widget.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tick_tock_widget*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | build
  | dist
  | release
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/tick_tock_widget",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI interaction",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Tool configuration for flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "release",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/tick_tock_widget"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# PyInstaller configuration section
[tool.pyinstaller]
spec_file = "tick_tock_widget.spec"
name = "TickTockWidget"
console = false
windowed = true
upx = true
